--- a/my_app/sub_app/templates/home.html
+++ b/my_app/sub_app/templates/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>HELLO, world!</h1>
     <form action = "" method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
